--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ nav ul ul {
 
 
 nav ul {
-	background:#2900ff; 
+	background:#3f464a; 
 	padding: 0 20px;
 	border-radius: 10px;  
 	list-style: none;
